--- a/src/components/TrackList/AdditionalInfo/AdditionalInfo.module.css
+++ b/src/components/TrackList/AdditionalInfo/AdditionalInfo.module.css
@@ -1,8 +1,8 @@
 .AdditionalInfo {
     display: grid;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 3fr 3fr;
     grid-gap: 2px;
-    /*padding: 5px;*/
     padding-bottom: 20px;
     color: rgba(0, 0, 0, .8);
 }
@@ -12,19 +12,20 @@
     color: rgba(0, 0, 0, .6);
     font-size: 18px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-family: 'Roboto', sans-serif;
 }
 
 .AdditionalInfo div {
     font-size: 13px;
     vertical-align: bottom;
+    padding-left: 8px;
+}
+
+.AdditionalInfo div span {
+    padding-left: 8px;
 }
 
 .odd {
     background: #97BBBE6B;
-}
-
-.cell {
-    padding-left: 14px;
 }
