--- a/src/components/TrackList/TrackItem/TrackItem.module.css
+++ b/src/components/TrackList/TrackItem/TrackItem.module.css
@@ -16,25 +16,9 @@
     background: #97BBBE6B;
 }
 
-.additionalInfo {
-    display: grid;
-    grid-template-columns: 1fr 3fr 3fr;
-    grid-gap: 2px;
-    /*padding: 5px;*/
-    padding-bottom: 20px;
-    color: rgba(0, 0, 0, .8);
-}
-
-.additionalInfo span {
-    display: block;
-    color: rgba(0, 0, 0, .6);
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    font-family: 'Roboto', sans-serif;
-}
-
-.additionalInfo div {
-    font-size: 13px;
-    /*font-family: 'Roboto', sans-serif;*/
+.expandCollapseButton {
+    margin: auto;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bolder;
 }
